@@ -93,9 +93,9 @@ AC_ARG_ENABLE(textfe,
 [  --disable-textfe        disable building text frontend],
         textfe=$enableval, textfe=yes)
 
-AC_ARG_ENABLE(gnome,
-[  --disable-gnome         disable use of gnome],
-        gnome=$enableval, gnome=yes)
+#AC_ARG_ENABLE(gnome,
+#[  --disable-gnome         disable use of gnome],
+#        gnome=$enableval, gnome=yes)
 
 #AC_ARG_ENABLE(zvt,
 #[  --disable-zvt           disable zvt/shelltab feature],
