@@ -16,6 +16,7 @@
  - Fixed a bug in entering text with GTK2 IMs [653751].
  - Final fix for filenames' encoding in DCC (I hope?).
  - New unicode character chart window.
+ - xtext: properly recalculate text widths after a font change.
  - 
  - 
  - 
